fix!: Fix selection of identity provider in case multiple match.
Keycloak's internal API has changed making the next version of this
extension incompatible with older Keycloak versions.

Signed-off-by: Sven-Torben Janus <sven-torben@sven-torben.de>